<resources>
    <string name="app_name">AndroidChat</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="input_message">メッセージを入力してください</string>
    <string name="profile">プロフィール</string>
    <string name="logout">ログアウト</string>
    <string name="friend">友達</string>
    <string name="chat">チャット</string>
</resources>
