<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <item
        android:id="@+id/menu_friends"
        android:orderInCategory="300"
        android:title="@string/friend"
        app:showAsAction="never" />
        -->
    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>